@@ -2,6 +2,7 @@ Revision history for Acme-CPANAuthors-British
 =============================================
 
         - fixed license fields in META.json to be lists.
+        - added new Authors: PRICHMOND, PWR.
 
 1.01    2014-03-28
         - added new Author: MJEVANS (via github, thanks Martin).
